fix: Restaurant details wrapping address

--- a/css/styles.css
+++ b/css/styles.css
@@ -330,7 +330,7 @@ nav h1 a {
 
 
 .restaurant-address {
-  font-size: 1.4em;
+  font-size: 1.3rem;
   margin: 10px 0px;
 }
 
